--- a/css/mobile.css
+++ b/css/mobile.css
@@ -392,6 +392,7 @@
     .image-list+.buttons .button,
     .consulting .container>.buttons .button,
     .maum-manual .buttons .button,
+    .psy-check .buttons .button,
     .todak .container>.buttons .button {
         width: 100% !important;
     }
@@ -495,18 +496,34 @@
         font-size: 1rem;
     }
 
-    .sub .maum-manual .psy-check-list li {
+    .sub .maum-manual .psy-check-list li,
+    .sub .psy-check .psy-check-list li {
         width: auto;
     }
 
-    .sub .maum-manual .psy-check-list li a {
+    .sub .maum-manual .thumbnail {
+        width: 80px !important;
+        height: 80px !important;
+    }
+    .sub .maum-manual .psy-check-list li a,
+    .sub .psy-check .psy-check-list li a {
         padding: 0 7px;
         height: 1.7rem;
         font-size: 11px;
     }
+    .sub .maum-manual .post-list .subject {
+        margin-top: 0;
+        line-height: 1.4;
+    }
+    .sub .maum-manual .post-list .info {
+        margin-top: 5px;
+    }
 
     .sub .post-list>li {
         width: 100%;
+    }
+    .sub .post-list>li:last-of-type {
+        margin-bottom: 0;
     }
 
     .sub .post-list>li a {
@@ -799,6 +816,83 @@
     }
     .sub .music .post-list li:last-of-type {
         margin-bottom: 0;
+    }
+
+    .sub .psy-check .post-content {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+    }
+    .sub .psy-check .post-content .subject {
+        margin-top: 0;
+        line-height: 1.3;
+        word-break: break-all;
+    }
+    .sub .psy-check .post-content .keyword {
+        margin-top: 5px;
+    }
+    .sub .psy-check .check-detail .header {
+        margin: -20px;
+        margin-bottom: 0;
+        padding: 3rem 3rem;
+    }
+    .sub .psy-check .check-detail .header .title {
+        font-size: 1.5rem;
+    }
+    .sub .psy-check .check-detail .body {
+        width: 100%;
+        margin-top: 30px;
+        margin-bottom: 0;
+    }
+    .sub .psy-check .check-detail .body ul {
+        margin-left: 22px;
+    }
+    .sub .psy-check .check-detail .body ul li {
+        margin-bottom: 1rem;
+        font-size: .9rem;
+    }
+    .sub .psy-check .check-detail .body .button {
+        margin-bottom: 0;
+    }
+    .sub .psy-check.is-complete .content img {
+        width: 170px;
+    }
+    .sub .psy-check.is-complete .content h2 {
+        font-size: 1.5rem;
+    }
+
+    .sub .psy-check .test {
+        width: 100%;
+    }
+    .test .testItem {
+        margin-bottom: 20px;
+    }
+    .test .testNumber {
+        font-size: 1rem;
+        left: 1rem;
+    }
+    .test dl dt {
+        width: 100%;
+        margin-bottom: 1rem;
+        font-size: 1.3rem;
+    }
+    .test ul li {
+        -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
+    }
+    .test ul li label {
+        font-size: 11px;
+        letter-spacing: -1px;
+    }
+    .test ul li label span {
+        width: 45px;
+        height: 45px;
+        font-size: 1.8rem;
+        margin-bottom: 0;
+    }
+    .test ul li input[type=radio]+label span::after {
+        width: 20px;
+        height: 20px;
+        background-size: 10px;
     }
 
     .tabs li {
