--- a/css/styles.css
+++ b/css/styles.css
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css?family=Nanum+Myeongjo&display=swap&subset=korean');
+@import url('https://fonts.googleapis.com/css?family=Montserrat:400,700');
 
 html,
 body {
@@ -337,17 +338,13 @@ header .util a:last-of-type {
     margin: .5rem;
     border-radius: 50px;
     font-size: 1.2rem;
-    transition: background-color .3s, transform .3s, color .5s;
+    transition: background-color .3s, color .5s;
 }
 
 .psy-check-list a::before {
     display: inline-block;
     content: "#";
     margin-right: 3px;
-}
-
-.psy-check-list a:hover {
-    transform: translateY(-4px);
 }
 
 .psy-check-list li.is-active a {
@@ -1015,15 +1012,18 @@ header .util a:last-of-type {
     width: 25%;
 }
 
-.sub .maum-manual .psy-check-list {
+.sub .maum-manual .psy-check-list,
+.sub .psy-check .psy-check-list {
     justify-content: flex-start;
 }
 
-.sub .maum-manual .psy-check-list li {
+.sub .maum-manual .psy-check-list li,
+.sub .psy-check .psy-check-list li {
     width: 12.5%;
 }
 
-.sub .maum-manual .psy-check-list a {
+.sub .maum-manual .psy-check-list a,
+.sub .psy-check .psy-check-list a {
     display: flex;
     justify-content: center;
     align-items: center;
@@ -1315,6 +1315,200 @@ header .util a:last-of-type {
 .sub .diary .checkbox input {
     margin-right: 5px;
 }
+
+/* psy-check */
+.sub .psy-check .post-content .subject {
+    margin-top: .8rem;
+}
+.sub .psy-check .post-content .keyword {
+    color: #f14668;
+}
+.sub .psy-check.is-detail .container {
+    width: 100%;
+    max-width: 100%;
+    margin: 0;
+}
+.sub .psy-check .check-detail .header {
+    position: relative;
+    overflow: hidden;
+    display: flex;
+    justify-content: center;
+    text-align: center;
+    padding: 7rem 3rem;
+}
+.sub .psy-check .check-detail .header .text {
+    color: #fff;
+}
+.sub .psy-check .check-detail .header .keywords {
+    margin-bottom: .5rem;
+}
+.sub .psy-check .check-detail .header .title {
+    font-size: 2rem;
+    color: #fff;
+    word-break: keep-all;
+    line-height: 1.2;
+    text-shadow: 1px 1px 3px rgba(0, 0, 0, 0.2);
+}
+.sub .psy-check .check-detail .header .image {
+    position: absolute;
+    top: 0;
+    width: 100%;
+    overflow: hidden;
+    z-index: -1;
+    filter: blur(3px);
+    -webkit-filter: blur(3px);
+    transform: scale(1.2);
+}
+.sub .psy-check .check-detail .header .image img {
+    object-fit: cover;
+    width: 100%;
+    height: 100%;
+}
+.sub .psy-check .check-detail .header .image::before {
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    display: block;
+    content: '';
+    background-color: rgba(0,0,0,0.3);
+}
+.sub .psy-check .check-detail .body {
+    width: 800px;
+    margin: 2rem auto;
+}
+.sub .psy-check .check-detail .body p {
+    margin-bottom: 1rem;
+}
+.sub .psy-check .check-detail .body .buttons {
+    margin-top: 2rem;
+}
+.sub .psy-check.is-complete .content {
+    text-align: center;
+}
+.sub .psy-check.is-complete .content img {
+    border-radius: 50%;
+    width: 250px;
+}
+.sub .psy-check.is-complete .content h2 {
+    text-align: center;
+    font-weight: normal;
+    margin: 1rem 0 0 0;
+    line-height: 1.2;
+}
+
+/* test */
+.sub .psy-check .test {
+    width: 800px;
+    margin: 50px auto 0;
+}
+.test .testItem {
+    position: relative;
+    border: 1px solid #ccc;
+    margin-bottom: 30px;
+    border-radius: 20px;
+    padding: 1rem 1rem 2rem;
+}
+
+.test .testNumber {
+    font-family: 'Montserrat', sans-serif;
+    position: absolute;
+    top: 1rem;
+    left: 1.5rem;
+    font-size: 2rem;
+    color: #999;
+}
+
+.test dl {
+    text-align: center;
+}
+
+.test dl dt {
+    width: 50%;
+    margin: 2rem auto;
+    font-size: 1.5rem;
+    font-weight: 600;
+    line-height: 1.4;
+    word-break: keep-all;
+    color: #555;
+}
+
+.test ul {
+    display: table;
+    table-layout: fixed;
+    width: 100%;
+}
+
+.test ul li {
+    display: table-cell;
+}
+
+.test ul li input[type=radio] {
+    display: none;
+    outline: none;
+}
+
+.test ul li label {
+    font-size: 1rem;
+    color: #999;
+    word-break: keep-all;
+}
+
+.test ul li label span {
+    font-family: 'Montserrat', sans-serif;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 70px;
+    height: 70px;
+    background-color: #eee;
+    border-radius: 50%;
+    margin: 0 auto 5px;
+    font-size: 2rem;
+    color: #bbb;
+    transition: transform .3s;
+    cursor: pointer;
+}
+
+.test ul li input[type=radio]:checked+label span {
+    background-color: #63bd83;
+    position: relative;
+    transform: translateY(-4px);
+    color: #fff;
+}
+
+.test ul li input[type=radio]+label span::after {
+    display: none;
+    content: "";
+    position: absolute;
+    top: 0;
+    right: 0;
+    width: 30px;
+    height: 30px;
+    border-radius: 50%;
+    background: url('../img/icon_check.png') center no-repeat #2b6d41;
+    background-size: 15px;
+}
+
+.test ul li input[type=radio]:checked+label span::after {
+    display: block;
+}
+
+.test ul li input[type=radio]:checked+label {
+    color: #2b6d41;
+    font-weight: 700;
+}
+
+.sub .psy-check.is-test .check-detail .header {
+    padding: 3rem;
+
+}
+
+.test .button i {
+    margin-right: 5px;
+}
+
 
 /* tab */
 
