--- a/css/mobile.css
+++ b/css/mobile.css
@@ -48,6 +48,7 @@
     body.is-fixed {
         margin-top: 54px;
     }
+
     body.is-fixed header .container {
         position: fixed;
         top: 0;
@@ -505,16 +506,19 @@
         width: 80px !important;
         height: 80px !important;
     }
+
     .sub .maum-manual .psy-check-list li a,
     .sub .psy-check .psy-check-list li a {
         padding: 0 7px;
         height: 1.7rem;
         font-size: 11px;
     }
+
     .sub .maum-manual .post-list .subject {
         margin-top: 0;
         line-height: 1.4;
     }
+
     .sub .maum-manual .post-list .info {
         margin-top: 5px;
     }
@@ -522,6 +526,7 @@
     .sub .post-list>li {
         width: 100%;
     }
+
     .sub .post-list>li:last-of-type {
         margin-bottom: 0;
     }
@@ -537,9 +542,11 @@
         margin-right: 12px;
         border-radius: 5px;
     }
+
     .sub .post-list .info span:not(.date) {
         margin-right: 10px !important;
     }
+
     .sub .post-list .info span:last-of-type {
         margin-right: 0 !important;
     }
@@ -662,16 +669,20 @@
     .sub .tv .subject {
         margin-top: 0 !important;
     }
+
     .sub .consulting .info,
     .sub .tv .info {
         margin-top: 0 !important;
     }
+
     .sub .tv .info {
         font-size: 11px;
     }
+
     .sub .tv .tags {
         margin-bottom: 5px;
     }
+
     .sub .consulting .post-list li:last-of-type,
     .sub .tv .post-list li:last-of-type {
         margin-bottom: 0;
@@ -729,12 +740,15 @@
     .sub .salon .post-content>.info {
         font-size: 12px;
     }
+
     .sub .salon .post-content .subject {
         position: relative;
     }
+
     .sub .salon .post-content .subject span {
         padding-right: 25px;
     }
+
     .sub .salon .post-content .subject i {
         position: absolute;
         right: 0;
@@ -750,23 +764,28 @@
     .sub .diary .post-list>li {
         padding: 0;
     }
+
     .sub .phrase .post-list>li a,
     .sub .diary .post-list>li a {
         padding: .9rem 0;
     }
+
     .sub .phrase .post-content,
     .sub .diary .post-content {
         width: 100%;
     }
+
     .sub .phrase .post-content .subject,
     .sub .diary .post-content .subject {
         margin: 0;
         font-size: .9rem;
     }
+
     .sub .phrase .post-content>.info,
     .sub .diary .post-content>.info {
         font-size: 12px;
     }
+
     .sub .phrase .post-detail .phrase-body {
         font-size: 1.6rem;
     }
@@ -776,27 +795,33 @@
         flex-direction: column;
         align-items: flex-start;
     }
+
     .sub .diary .post-list .post-content .subject {
         position: relative;
         width: 100%;
         line-height: 1;
         margin-bottom: 5px;
     }
+
     .sub .diary .post-list .post-content .subject .text {
         padding-right: 20px;
         color: #000;
     }
+
     .sub .diary .post-list .post-content .subject i {
         position: absolute;
         right: 0;
     }
+
     .sub .diary .post-list .post-content .subject .date {
         margin-bottom: 10px;
         font-size: 12px;
     }
+
     .sub .diary .post-list .post-content .subject span {
         margin: 0;
     }
+
     .sub .diary .post-content>.info .date {
         width: auto;
     }
@@ -806,14 +831,17 @@
         flex-direction: column;
         justify-content: center;
     }
+
     .sub .music .post-content>.subject {
         margin-top: 0;
         margin-bottom: 5px;
     }
+
     .sub .music .post-content>.info {
         margin-top: 0 !important;
         font-size: 12px;
     }
+
     .sub .music .post-list li:last-of-type {
         margin-bottom: 0;
     }
@@ -823,40 +851,50 @@
         flex-direction: column;
         justify-content: center;
     }
+
     .sub .psy-check .post-content .subject {
         margin-top: 0;
         line-height: 1.3;
         word-break: break-all;
     }
+
     .sub .psy-check .post-content .keyword {
         margin-top: 5px;
     }
+
     .sub .psy-check .check-detail .header {
         margin: -20px;
         margin-bottom: 0;
         padding: 3rem 3rem;
     }
+
     .sub .psy-check .check-detail .header .title {
         font-size: 1.5rem;
     }
+
     .sub .psy-check .check-detail .body {
         width: 100%;
         margin-top: 30px;
         margin-bottom: 0;
     }
+
     .sub .psy-check .check-detail .body ul {
         margin-left: 22px;
     }
+
     .sub .psy-check .check-detail .body ul li {
         margin-bottom: 1rem;
         font-size: .9rem;
     }
+
     .sub .psy-check .check-detail .body .button {
         margin-bottom: 0;
     }
+
     .sub .psy-check.is-complete .content img {
         width: 170px;
     }
+
     .sub .psy-check.is-complete .content h2 {
         font-size: 1.5rem;
     }
@@ -864,36 +902,100 @@
     .sub .psy-check .test {
         width: 100%;
     }
+
     .test .testItem {
         margin-bottom: 20px;
     }
+
     .test .testNumber {
         font-size: 1rem;
         left: 1rem;
     }
+
     .test dl dt {
         width: 100%;
         margin-bottom: 1rem;
         font-size: 1.3rem;
     }
+
     .test ul li {
         -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
     }
+
     .test ul li label {
         font-size: 11px;
         letter-spacing: -1px;
     }
+
     .test ul li label span {
         width: 45px;
         height: 45px;
         font-size: 1.8rem;
         margin-bottom: 0;
     }
+
     .test ul li input[type=radio]+label span::after {
         width: 20px;
         height: 20px;
         background-size: 10px;
     }
+
+    .account .slogan h1 {
+        font-size: 1.6rem;
+    }
+
+    .account .slogan p {
+        font-size: .8rem;
+    }
+
+    .account .field-login,
+    .account .field-register,
+    .account .field-withdraw {
+        width: 100%;
+    }
+
+    .account .field-register .button {
+        width: 100%;
+        margin-left: 0 !important;
+        margin-right: 0 !important;
+    }
+
+    .account .page-title h1 {
+        font-size: 1.5rem;
+    }
+
+    .account .account-complete {
+        width: 100%;
+    }
+
+    .account .account-complete img {
+        width: 170px;
+    }
+
+    .account .account-complete h2 {
+        width: 100%;
+        font-size: 1.1rem;
+        line-height: 1.5;
+        padding: 0 30px;
+    }
+
+    .account .account-complete h2+p {
+        font-size: 13px;
+        padding: 0 50px;
+        word-break: keep-all;
+    }
+
+    .account .message {
+        width: 100%;
+    }
+
+    .etc .buttons .button {
+        width: 100%;
+        margin-left: 0 !important;
+        margin-right: 0 !important;
+    }
+
+
 
     .tabs li {
         flex-grow: 1;
